RESOLVED FIXED181146
WebKit fixes to enable -Wstrict-prototypes for Safari
https://bugs.webkit.org/show_bug.cgi?id=181146
Summary WebKit fixes to enable -Wstrict-prototypes for Safari
David Kilzer (:ddkilzer)
Reported 2017-12-23 17:09:52 PST
Safari uses some WebKit SPI that needs to be fixed in order to enable -Wstrict-prototypes.
Attachments
Patch v1 (12.47 KB, patch)
2017-12-24 09:33 PST, David Kilzer (:ddkilzer)
no flags
Patch v2 (12.64 KB, patch)
2017-12-24 09:43 PST, David Kilzer (:ddkilzer)
no flags
Archive of layout-test-results from ews105 for mac-elcapitan-wk2 (2.65 MB, application/zip)
2017-12-24 10:56 PST, EWS Watchlist
no flags
David Kilzer (:ddkilzer)
Comment 1 2017-12-24 09:33:54 PST
Created attachment 330172 [details] Patch v1
Radar WebKit Bug Importer
Comment 2 2017-12-24 09:34:57 PST
EWS Watchlist
Comment 3 2017-12-24 09:35:41 PST
Attachment 330172 [details] did not pass style-queue: ERROR: Source/WebCore/platform/ios/wak/WebCoreThreadRun.cpp:136: _WebThreadRun is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
David Kilzer (:ddkilzer)
Comment 4 2017-12-24 09:43:40 PST
Created attachment 330173 [details] Patch v2
EWS Watchlist
Comment 5 2017-12-24 09:47:08 PST
Attachment 330173 [details] did not pass style-queue: ERROR: Source/WebCore/platform/ios/wak/WebCoreThreadRun.cpp:136: _WebThreadRun is incorrectly named. Don't use underscores in your identifier names. [readability/naming/underscores] [4] Total errors found: 1 in 12 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 6 2017-12-24 10:56:51 PST
Comment on attachment 330173 [details] Patch v2 Attachment 330173 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.webkit.org/results/5819881 New failing tests: imported/w3c/web-platform-tests/service-workers/service-worker/ServiceWorkerGlobalScope/update.https.html
EWS Watchlist
Comment 7 2017-12-24 10:56:52 PST
Created attachment 330174 [details] Archive of layout-test-results from ews105 for mac-elcapitan-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-elcapitan-wk2 Platform: Mac OS X 10.11.6
David Kilzer (:ddkilzer)
Comment 8 2017-12-24 13:35:01 PST
Comment on attachment 330173 [details] Patch v2 Clearing flags on attachment: 330173 Committed r226291: <https://trac.webkit.org/changeset/226291>
David Kilzer (:ddkilzer)
Comment 9 2017-12-24 13:35:03 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.