WebKit fixes to enable -Wstrict-prototypes for Safari <https://webkit.org/b/181146>

Reviewed by Dan Bernstein.

Source/WebCore:

* platform/ios/wak/WebCoreThread.h:
(WebThreadLockFromAnyThread):
(WebThreadLockFromAnyThreadNoLog):
(WebThreadUnlockFromAnyThread):
(WebThreadUnlockGuardForMail):
(WebThreadSetShouldYield):
- Add 'void' to C function declarations.
* platform/ios/wak/WebCoreThread.mm:
(WebThreadLockFromAnyThread):
(WebThreadLockFromAnyThreadNoLog):
(WebThreadUnlockFromAnyThread):
(WebThreadUnlockGuardForMail):
- Add 'void' to C function implementations.
* platform/ios/wak/WebCoreThreadRun.cpp:
(class WebThreadBlock): Add 'void' to block declarations.
Rename 'task' to 'block' for consistency.
(_WebThreadRun): Add 'void' to block declaration.  Make
argument name match declaration by changing 'task' to 'block'.
(WebThreadRun): Ditto.
* platform/ios/wak/WebCoreThreadRun.h:
(WebThreadRun): Add 'void' to block declaration.

Source/WebKit:

* Shared/API/c/WKGeometry.cpp:
(WKSizeGetTypeID):
(WKPointGetTypeID):
(WKRectGetTypeID):
* Shared/API/c/WKGeometry.h:
(WKSizeGetTypeID):
(WKPointGetTypeID):
(WKRectGetTypeID):
* Shared/API/c/WKImage.cpp:
(WKImageGetTypeID):
* Shared/API/c/WKImage.h:
(WKImageGetTypeID):
- Add 'void' to C function declarations and implementations as
  necessary.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView applyAutocorrection:toString:withCompletionHandler:]):
* UIProcess/API/Cocoa/WKWebViewPrivate.h:
- Add 'void' to block declarations as necessary.

Canonical link: https://commits.webkit.org/197015@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@226291 268f45cc-cd09-0410-ab3c-d52691b4dbfc